<resources>
    <string name="app_name">FoodSharing</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">메인</string>
    <string name="title_maps">내 주변</string>
    <string name="title_chatting">채팅</string>
    <string name="title_recommend">추천</string>
    <string name="title_myInfo">내 정보</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
