<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_chatting"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_chatting" />

    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recommend" />

    <item
        android:id="@+id/navigation_myInfo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_myInfo" />

</menu>
